--- a/problems/templates/problems/compile_paper.html
+++ b/problems/templates/problems/compile_paper.html
@@ -1,4 +1,19 @@
 {% extends 'base/base.html' %}
+{% load static %}
+
+{% block custom_css %}
+    <link rel="stylesheet" href="{% static 'problems/css/problems.css' %}" type="text/css">
+{% endblock custom_css %}
+
+{% block scripts %}
+    <!-- jsDelivr :: Sortable :: Latest (https://www.jsdelivr.com/package/npm/sortablejs) -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+    {% csrf_token %}
+    <script>
+        const CSRF_TOKEN = document.querySelector('[name=csrfmiddlewaretoken]').value;
+    </script>
+    <script src="{% static 'problems/js/compile_paper.js' %}"></script>
+{% endblock scripts %}
 
 {% block title %}
     <title>Compile paper</title>
@@ -6,8 +21,8 @@
 
 {% block content %}
     <div class="container">
-        <div class="row justify-content-center">
-            <h4>Compile paper</h4>
+        <div class="row justify-content-center" id="mainDiv">
+
         </div>
     </div>
 {% endblock content %}
