--- a/problems/templates/problems/problems_list.html
+++ b/problems/templates/problems/problems_list.html
@@ -74,7 +74,7 @@
                                         {% if problem.attributes.all %}
                                             {% for attribute in problem.attributes.all %}
                                                 <li class="list-group-item border-0 small">
-                                                    <div class="boxed no-select"
+                                                    <div class="boxed user-select-none"
                                                          style="background-color:{{ attribute.color }}">
                                                         {{ attribute.name }}
                                                     </div>
