--- a/problems/templates/problems/problems_list.html
+++ b/problems/templates/problems/problems_list.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-3">
+            <div class="col-md-3">
                 {% include 'problems/filter.html' %}
                 <div class="card mt-2" id="cartCard">
                     <div class="card-title">
