Add compiling to pdf

--- a/problems/templates/problems/compile_problems_list.html
+++ b/problems/templates/problems/compile_problems_list.html
@@ -47,8 +47,12 @@
         <input style="display: none" id="selectedProblems" value=""
                name="selectedProblems">
         <button class="btn btn-outline-success mt-4 mb-4" type="submit"
-                name="startEditButton">
+            name="getTexButton">
             Get TeX
+        </button>
+        <button class="btn btn-outline-success mt-4 mb-4" type="submit"
+            name="getPdfButton">
+            Get Pdf
         </button>
     </form>
 {% else %}
