--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -23,7 +23,6 @@
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             crossorigin="anonymous"></script>
 
-
     {% block scripts %}
     {% endblock scripts %}
 
@@ -41,15 +40,16 @@
 {% include 'base/footer.html' %}
 
 <!-- KaTeX scripts -->
-<script src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js"
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js"
         integrity="sha384-YNHdsYkH6gMx9y3mRkmcJ2mFUjTd0qNQQvY9VYZgQd7DcN7env35GzlmFaZ23JGp"
         crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js"
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js"
         integrity="sha384-vZTG03m+2yp6N6BNi5iM4rW4oIwk5DfcNdFfxkk9ZWpDriOkXX8voJBFrAO7MpVl"
         crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/copy-tex.min.js"
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/copy-tex.min.js"
         integrity="sha384-Ep9Es0VCjVn9dFeaN2uQxgGcGmG+pfZ4eBaHxUpxXDORrrVACZVOpywyzvFRGbmv"
         crossorigin="anonymous"></script>
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         renderMathInElement(document.body, {
